--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^2.6.11",
+    "vue-excel-xlsx": "^1.2.2",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.3.13",
